; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_xmlmemory.c_xmlCleanupMemory.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_xmlmemory.c_xmlCleanupMemory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xmlMemInitialized = common dso_local global i64 0, align 8
@xmlMemMutex = common dso_local global i32* null, align 8
@xmlGenericErrorContext = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xmlCleanupMemory() #0 {
  %1 = load i64, i64* @xmlMemInitialized, align 8
  %2 = icmp eq i64 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %7

4:                                                ; preds = %0
  %5 = load i32*, i32** @xmlMemMutex, align 8
  %6 = call i32 @xmlFreeMutex(i32* %5)
  store i32* null, i32** @xmlMemMutex, align 8
  store i64 0, i64* @xmlMemInitialized, align 8
  br label %7

7:                                                ; preds = %4, %3
  ret void
}

declare dso_local i32 @xmlFreeMutex(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
